--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 <script>
     const debug = false;
     const debugSpecial = false;
-    const version = '3.16'
+    const version = '3.17'
         +(debug?'&_='+Math.random():'');
     const useHumanCharacterImages = false;
     const useAiCharacterImages = false;
@@ -802,7 +802,7 @@ row3.style.color = player.personalGoalAchieved?'#4CFF4C':'white';
                 '</div>' +
                 '<div class="phase3Element phaseElement">Fight a patrol (required if you have <span class="icon negative">negative</span> reputation with a patrol in your space)</div>' +
                 '<div class="phase3Element phaseElement">Resolve a space encounter card (Planet, Maelstrom, Navpoint' + (gameMode === "base" ? '' : ', Core Worlds') + ').</div>' +
-                '<div class="phase3Element phaseElement">Encounter facedown contact (<strong>must</strong> resolve appropriate databank card) or fight faceup contact, which is your bounty.</div>' +
+                '<div class="phase3Element phaseElement">Encounter facedown contact (<strong>must</strong> resolve appropriate databank card) or fight faceup bounty contact.</div>' +
                 '<div class="phase3Element phaseElement">Play any "<strong>Encounter</strong>" on Player, Ship or any other card in your hand</div>' +
                 '</div>';
 
