--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         </select>
 
         <select id="playerCharacter"></select>
+        <button id="randomCharacter">Random character</button>
         <input type="text" id="playerNickname" placeholder="Player 1">
         <select id="playerColor"></select>
         <div id="playerFormError" style="color: #ff5555; margin: 5px 0; display: none;"></div>
